Changed BossFight.java