@@ -7,6 +7,8 @@ import app.models.Config;
 import app.models.participants.BaseHero;
 import app.models.participants.Boss;
 
+import java.util.Comparator;
+import java.util.Iterator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -21,18 +23,16 @@ public class BossFight implements Action {
         Targetable boss = participants.stream().filter(p -> p.getClass().getSimpleName().equals("Boss"))
                 .findFirst().orElse(null);
 
-        List<Targetable> heroes = participants.stream().filter(p -> !p.getClass().getSimpleName().equals("Boss"))
-                .collect(Collectors.toList());
+        List<Targetable> heroes = participants.stream().filter(p -> !p.getClass().getSimpleName().equals("Boss")).toList();
 
-        List<Targetable> aliveHeroes = heroes.stream().filter(Targetable::isAlive).collect(Collectors.toList());
+        List<Targetable> aliveHeroes = heroes.stream().filter(Targetable::isAlive).toList();
 
 
         assert boss != null;
 
-        for (Targetable hero : heroes) {
+            while (boss.isAlive()) {
 
-            while (hero.isAlive() && boss.isAlive()) {
-
+                for (Targetable hero : heroes) {
                 hero.attack(boss);
 
                 if (!boss.isAlive()) {
@@ -40,19 +40,22 @@ public class BossFight implements Action {
                     aliveHeroes.forEach(Targetable::levelUp);
 
                     for (Targetable aliveHero : aliveHeroes) {
+
                         assert aliveHero instanceof BaseHero;
-                        ((BaseHero) aliveHero).setGold(aliveHero.getGold() + Config.BOSS_INDIVIDUAL_REWARD);
+
+                        ((BaseHero) aliveHero).setGold(Config.BOSS_INDIVIDUAL_REWARD);
                     }
 
                     return boss.getName() + " has been slain by:" + System.lineSeparator() +
-                            aliveHeroes.stream().map(Targetable::toString).collect(Collectors.joining(System.lineSeparator()));
+                            aliveHeroes.stream()
+                                    .sorted(Comparator.comparing(Targetable::getName))
+                                    .map(Targetable::toString)
+                                    .collect(Collectors.joining(System.lineSeparator()));
                 }
 
                 boss.attack(hero);
 
                 if (!hero.isAlive()) {
-                    hero.giveReward(boss);
-                    boss.levelUp();
                     break;
 
                 }
@@ -60,4 +63,6 @@ public class BossFight implements Action {
         }
         return "Boss has slain them all!";
         }
+
+
     }
